<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/field_background"
    tools:context=".MainActivity"
    android:theme="@style/AppTheme">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:fillViewport="true"
        android:layout_above="@id/buttonLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/scrolling">

        <LinearLayout
            android:id="@+id/fieldAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:background="@drawable/field_login"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            tools:targetApi="o">

            <ImageView
                android:id="@+id/testImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/appName"
                android:src="@mipmap/hugo_welcome"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/welcomeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <TextView
            android:id="@+id/underWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldAppName"
            android:layout_marginTop="80dp"
            android:text="@string/statement"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            tools:targetApi="o"/>

        <LinearLayout
            android:id="@+id/fieldLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/underWelcome"
            android:padding="5dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/field_login"
            android:orientation="vertical"
            tools:targetApi="o">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/checkOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/emailMain"
                    android:hint="@string/inputEmail"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:theme="@style/AppTheme"
                    android:textColor="@android:color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/checkTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorGray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordMain"
                    android:hint="@string/inputPassword"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:theme="@style/AppTheme"
                    android:textColor="@android:color/black"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldLogin"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/registerState"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:background="?attr/selectableItemBackground"
            android:foreground="@android:color/transparent"
            tools:targetApi="m"
            tools:ignore="UnusedAttribute"/>
    </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/field_button"
        tools:targetApi="o"/>
</RelativeLayout>