<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/createFeed"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@mipmap/pet_extra"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/createTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:fontFamily="@font/lato_semi"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        tools:targetApi="o">

        <TextView
            android:id="@+id/forWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/feedWeight"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="textStart"
            android:fontFamily="@font/lato_regular"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/feedGram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:targetApi="o"
            android:text="@string/forGram"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.25"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:fontFamily="@font/lato_regular"
            tools:targetApi="o"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/gram"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="textStart"
            android:fontFamily="@font/lato_regular"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        tools:targetApi="o">

        <TextView
            android:id="@+id/forFirstTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="15dp"
            android:text="@string/firstType"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="textStart"
            android:fontFamily="@font/lato_regular"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/firstHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:maxLength="2"
            android:maxLines="1"
            tools:targetApi="o"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"
            android:inputType="number"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.25"
            android:text="@string/strip"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:fontFamily="@font/lato_regular"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/firstMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:maxLength="2"
            android:maxLines="1"
            tools:targetApi="o"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:inputType="number"
            tools:ignore="LabelFor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        tools:targetApi="o">

        <TextView
            android:id="@+id/forSecondTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="15dp"
            android:text="@string/secondType"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="textStart"
            android:fontFamily="@font/lato_regular"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/secondHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:maxLength="2"
            android:maxLines="1"
            android:enabled="false"
            tools:targetApi="o"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.25"
            android:text="@string/strip"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:fontFamily="@font/lato_regular"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/secondMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:maxLength="2"
            android:maxLines="1"
            android:enabled="false"
            tools:targetApi="o"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/abortFeed"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/field_backup"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/lato_regular"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/saveFeed"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/field_button"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/lato_regular"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
